# avwx

./: .travis.yml  LICENSE  README.md  av.cabal  avwx.cabal  changelog.md  stack.yaml
app/: Main.hs
src/: Aeroplane.hs  FetchWX.hs  ParseWX.hs  WX.hs  WXCache.hs  WXDemo.hs
src/Data/Aviation/: WX.hs
src/Data/Aviation/WX/: Fetcher.hs
test/: Spec.hs
