name:           av
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Hans-Christian Esperer
synopsis:       Various aviation related utilities
license:        MIT
copyright:      Hans-Christian Esperer

executable fetchwx
  hs-source-dirs:  src
  main-is:         FetchWX.hs
  build-depends:   
                   base >= 4,
                   HTTP >=4000.2.8 && <4000.3,
                   text >=0.11.3 && <0.12,
                   attoparsec >=0.10.4 && <0.11
  ghc-options:     -Wall -rtsopts
  other-modules:   WX

executable parsewx
  build-depends:   
                   base >= 4,
                   HTTP >=4000.2.8 && <4000.3,
                   text >=0.11.3 && <0.12,
                   attoparsec >=0.10.4 && <0.11
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         ParseWX.hs
  other-modules:   WX

