name:                avwx
version:             0.1.0.0
synopsis:            Parse METAR weather reports
description:         Parse METAR weather reports
homepage:            https://github.com/hce/avwx
license:             MIT
license-file:        LICENSE
author:              Hans-Christian Esperer <hc@hcesperer.org>
maintainer:          Hans-Christian Esperer <hc@hcesperer.org>
copyright:           2016, Hans-Christian Esperer
category:            Codec
build-type:          Simple
extra-source-files:  README.md changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Aviation.WX
  other-modules:       Data.Aviation.WX.Fetcher
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , binary >= 0.7.5.0 && < 0.9
                     , bytestring >= 0.10.6.0 && < 0.11
                     , containers >= 0.5.6.2 && < 0.6
                     , conduit >= 1.2.6.6 && < 1.3
                     , exceptions >= 0.8.2.1 && < 0.9
                     , mtl >= 2.2.1 && < 2.3
                     , path >= 0.5.7 && < 0.6
                     , text >= 1.2.2.1 && < 1.3
                     , time >= 1.5.0.1 && < 1.7
  default-language:    Haskell2010

test-suite avwx-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , conduit
                     , cryptohash
                     , hascar
                     , hex
                     , path
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/VirtualForgeGmbH/hascar.git
